k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tienda-demo
  labels:
    app: tienda-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tienda-demo
  template:
    metadata:
      labels:
        app: tienda-demo
    spec:
      containers:
      - name: tienda-demo
        image: docker.io/guerrero11dan/tienda-demo:3745452
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
